...
        android:id="@+id/menu_pocket"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="Pocket" />

    <item
        android:id="@+id/menu_bill"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="Bill" />

    <item
        android:id="@+id/menu_reminder"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_date_range_24"
        android:title="Reminder" />
...
